test/fail_compilation/extra-files/test21164a.d
struct D(E)
{
    void G()    {
        import test21164d;
I;
    }

}

